update tracking